# advent-of-code

./: .editorconfig  .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  day1.py  day12.py  day2.py  day3.py  day4.py  day7.py  day8.py  day9.py  download_inputs.py  go.mod  go.sum  hello.py  initialize.py  pyproject.toml  requirements.txt  setup.cfg
.devcontainer/: Dockerfile  devcontainer.json
2018/: day1.py  day10.py  day11.py  day12.py  day13.py  day2.py  day3.py  day4.py  day5.py  day6.py  day7.py  day8.py  day9.py
2019/: day1.go  download_inputs.py  go.mod  main.go  main_test.go
2021/: initialize.py
aoc_2015/: day01.py  day02.py  day06.py  day07.py  day09.py  day10.py  day11.py  day12.py  day13.py  day14.py  day15.py  day16.py  day17.py  day18.py  day19.py  day20.py  day21.py  day3.py  day7.py  day8.py  day9.py
aoc_2017/: day01.py  day02.py  day03.py  day04.py  day05.py  day06.py  day07.py  day08.py  day09.py  day10.py  day11.py  day12.py  day13.py  day14.py  day15.py  day16.py  day17.py  day18.py  day19.py  day20.py  day21.py  day22.py  day23.py  day24.py  day25.py  knot_hash.py
aoc_2018/: __init__.py  day1.py  day10.py  day11.py  day12.py  day2.py  day3.py  day4.py  day5.py  day6.py  day7.py  day8.py  day9.py
aoc_2019/: main_test.go
aoc_2020/: day1.py  day10.py  day11.py  day11_p2.py  day12.py  day13.py  day14.py  day15.py  day16.py  day18.py  day19.py  day2.py  day21.py  day22.py  day23_p2.py  day24.py  day25.py  day3.py  day4.py  day5.py  day6.py  day7.py  day8.py  day9.py
aoc_2021/: day1.py  day10.py  day11.py  day11_visualization.py  day12.py  day14.py  day15.py  day16.py  day16_sample.py  day17.py  day18.py  day19.py  day2.py  day20.py  day21.py  day23.py  (+9 more)
(+214 files in other folders)
