[project]
name = "advent-of-code"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "ipython>=9.8.0",
    "more-itertools>=10.6.0",
    "numpy>=2.2.3",
    "scipy>=1.16.3",
    "types-requests>=2.33.0.20260518",
]

[tool.ty.rules]
all = "error"

[tool.ruff.lint]
extend-select = ['T10', 'E', 'W', 'DJ', 'I', 'UP']
preview = true

[dependency-groups]
dev = [
    "pre-commit>=4.6.0",
    "ruff>=0.9.7",
    "scipy-stubs>=1.16.3.3",
    "ty>=0.0.33",
]
